Fix windows path problem

--- a/CmdUI.vcxproj
+++ b/CmdUI.vcxproj
@@ -43,10 +43,12 @@
     <Import Project="$(QtMsBuild)\qt_defaults.props" />
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <OutDir>..\..\python\pngScale</OutDir>
+    <TargetName>PngScale</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutDir>D:\Green\[Proxy]\frp_0.33.0_windows_amd64</OutDir>
-    <TargetName>Exe64bitDetectorUI</TargetName>
+    <OutDir>..\..\python\pngScale</OutDir>
+    <TargetName>PngScale</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Link>
@@ -67,12 +69,12 @@
     </Link>
   </ItemDefinitionGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
-    <QtInstall>5.15.0 static</QtInstall>
+    <QtInstall>5.15.0_ms2019_x64_static</QtInstall>
     <QtModules>core;gui;widgets;network</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
-    <QtInstall>5.15.0 static</QtInstall>
+    <QtInstall>5.15.0_ms2019_x64_static</QtInstall>
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>release</QtBuildConfig>
   </PropertyGroup>
